--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -7,5 +7,6 @@
   "arrowParens": "avoid",
   "trailingComma": "es5",
   "bracketSameLine": false,
-  "printWidth": 120
+  "printWidth": 120,
+  "endOfLine":"auto"
 }
